--- a/css/templatemo-dream-pulse.css
+++ b/css/templatemo-dream-pulse.css
@@ -42,6 +42,8 @@ a {
 
 .tm-bg-black-transparent {
   background-color: rgba(0, 0, 0, 0.3);
+  backdrop-filter: blur(5px);
+  -webkit-backdrop-filter: blur(5px);
 }
 
 .tm-bg-white-transparent {
@@ -62,6 +64,7 @@ a {
 }
 
 .parallax-window {
+  width: 100%;
   min-height: 662px;
   background: transparent;
 }
